--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Kaixin's website
+subtitle: I wish I could fly as far as I can.
+subtitle: 立个flag，王者天下我一定要写完
 use-site-title: true
 ---
 
